tests/slp27_const_numeric_invalid_position_bad.sl
fn main() {
	var x const_int = 1
	_ = x
}
